tests/parse_print/random_perturb/set01/delete-02/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/set01/delete-02/delete-02.essence Error is:
ValidatorError tests/parse_print/random_perturb/set01/delete-02/delete-02.essence:3:14:
  |
3 | find x : set (siz 2) of int(1..3)
  |              ^
Missing of

tests/parse_print/random_perturb/set01/delete-02/delete-02.essence:3:15:
  |
3 | find x : set (siz 2) of int(1..3)
  |               ^^^
Error: Symbol not found "siz"

tests/parse_print/random_perturb/set01/delete-02/delete-02.essence:3:19:
  |
3 | find x : set (siz 2) of int(1..3)
  |                   ^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/random_perturb/set01/delete-02/delete-02.essence:3:19:
  |
3 | find x : set (siz 2) of int(1..3)
  |                   ^
Missing )
